# svelte-course

./: README.md
book-nest/: package-lock.json  package.json
book-nest/backend/: pyproject.toml
book-nest/backend/backend/: app.py
book-nest/frontend/: package-lock.json  package.json
book-nest/frontend/src/: app.css  app.html  hooks.server.ts
book-nest/frontend/src/routes/: +layout.svelte
book-nest/src/: app.css  hooks.server.ts
book-nest/src/lib/components/: AuthForm.svelte  BookCard.svelte  BookCategory.svelte  Button.svelte  HeroSection.svelte  StarRating.svelte  index.ts
book-nest/src/lib/state/: user-state.svelte.ts
book-nest/src/lib/types/: database.types.ts
book-nest/src/lib/utils/: openai-helpers.ts
book-nest/src/routes/: +layout.svelte
book-nest/src/routes/login/: +page.server.ts  +page.svelte
book-nest/src/routes/private/: +layout.svelte
dev-portfolio/dev-portfolio-sanity/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts  sanity.types.ts  schema.json
dev-portfolio/dev-portfolio-sanity/schemaTypes/: devExperience.ts  project.ts  skill.ts
dev-portfolio/frontend/: package-lock.json  package.json  svelte.config.js
dev-portfolio/frontend/src/: app.css  app.html
ebook-landing/: README.md
ebook-landing/backend/: .gitignore  README.md  pyproject.toml
ebook-landing/backend/backend/: app.py  schemas.py  settings.py
ebook-landing/backend/tests/: test_app.py
ebook-landing/frontend/: README.md  package-lock.json  package.json  svelte.config.js
ebook-landing/frontend/src/: app.css  app.html
(+61 files in other folders)
