[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
stripe = "^11.2.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
taskipy = "^1.14.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff check .; ruff check . --diff"
format = "ruff check . --fix; ruff format ."
pre_test = "task lint"
test = "pytest -s -x -vv"
run = "fastapi dev backend/app.py"